# z80_aw

./: .gitignore  .gitmodules  PLAN  PROGRAMATIC  README.md  TODO  programmer  reset  terminal  upload
commlib/: Makefile  commlib.c  commlib.h  serial.c  serial.h
common/: messages.proto  protocol.h  sdcardstage.h
controller/: Makefile  comm.c  comm.h  computer.cc  io.c  io.cc  io.h  io.hh  main.c  main.cc  messages.h  repl.cc  repl.hh  serial.c  serial.cc  serial.h  serial.hh  z80_controller.hex  z80_debugger.hex
debugger/: .gitignore  Makefile  args.c  args.h  avrdude_gpio.conf  commands.c  commands.h  config.cc  config.hh  io.c  io.h  main.c  main.cc  myui.cc  myui.hh  options.cc  options.hh  protocol.hh  repl.c  repl.h  serial.c  serial.h  test.c  test.h  ui.cc  ui.hh  window.cc  window.hh  z80_debugger.hex
doc/: bus.txt  protocol.txt  sdcard.txt
emulator/: CMakeLists.txt  Makefile  TODO  main.c  main.cc  z80_user.c
emulator/compiler/: compiler.cc  compiler.hh
emulator/config/: config.cc  config.hh
emulator/hardware/: emulatedhardware.cc  emulatedhardware.hh  hardware.cc  hardware.hh
emulator/ui/: colors.hh  memory.cc  memory.hh  source.cc  source.hh  status.cc  status.hh  terminal.cc  terminal.hh  ui.cc  ui.hh  window.cc  window.hh
emulator/z80/: Z80.h  z80_user.c  z80_user.cc
firmware/: Makefile  ansi.c  ansi.h  breakpoints.c  breakpoints.h  buffer.c  (+39 more)
firmware-controller/: .gitignore  Makefile  main.cc  messages.proto  pb.h  pb_common.c  pb_common.h  pb_decode.c  pb_decode.h  pb_encode.c  pb_encode.h  repl.cc  repl.hh  serial.cc  serial.hh
(+225 files in other folders)
